--- a/gcpnodefunction/package.json
+++ b/gcpnodefunction/package.json
@@ -15,6 +15,7 @@
     "@google-cloud/iot": "^2.3.0",
     "@google-cloud/pubsub": "^2.10.0",
     "@google-cloud/storage": "^5.8.1",
+    "@google-cloud/vision": "^2.3.1",
     "escape-html": "^1.0.3",
     "googleapis": "^67.1.1",
     "jsonwebtoken": "^8.5.1",
